# AppleMusicDecrypt

./: Dockerfile  README.md  android-deploy.md  config.example.toml  main.py  pyproject.toml
.github/workflows/: main.yml  win-build.yml
assets/: device.wvd  storefronts.json
src/: api.py  cmd.py  config.py  exceptions.py  flags.py  logger.py  measurer.py  metadata.py  mp4.py  quality.py  rip.py  save.py  task.py  types.py  url.py  utils.py
src/grpc/: manager.proto  manager.py  manager_pb2.py  manager_pb2.pyi  manager_pb2_grpc.py
src/legacy/: decrypt.py  mp4.py  pssh.py
src/legacy/proto/: WidevineCencHeader_pb2.py  WidevineCencHeader_pb2.pyi
src/models/: __init__.py  album_meta.py  album_tracks.py  artist_info.py
tools/: install-deps.sh  login.py  logout.py
