[tool.poetry]
name = "applemusicdecrypt"
version = "0.1.0"
description = ""
authors = ["WorldObservationLog <wolc@duck.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.28.1"
regex = "^2024.11.6"
pydantic = "^2.7.0"
loguru = "^0.7.2"
six = "^1.16.0"
lxml = "^5.2.1"
beautifulsoup4 = "^4.12.3"
m3u8 = "^6.0.0"
tenacity = "^9.1.2"
prompt-toolkit = "^3.0.43"
async-lru = "^2.0.4"
winloop = { version = "^0.1.3", platform = "win32" }
uvloop = [{ version = "^0.19.0", platform = "linux" },
    { version = "^0.19.0", platform = "darwin" }]
prettytable = "^3.10.0"
pyventus = "^0.7.0"
grpcio = "^1.72.1"
grpcio-tools = "^1.72.1"
creart = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
